--- a/package.json
+++ b/package.json
@@ -33,38 +33,38 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^8.6.2",
+    "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.4",
+    "browser-sync": "^2.24.7",
     "chai": "^4.1.2",
     "chai-diff": "^1.0.1",
-    "compression": "^1.7.2",
+    "compression": "^1.7.3",
     "cpx": "^1.5.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.5.0",
     "eslint-plugin-chai-expect": "^1.1.1",
-    "eslint-plugin-mocha": "^5.0.0",
-    "handlebars": "^4.0.11",
-    "less": "^3.0.4",
+    "eslint-plugin-mocha": "^5.2.0",
+    "handlebars": "^4.0.12",
+    "less": "^3.8.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.1",
     "mkdirp": "^0.5.1",
     "mocha": "^5.2.0",
-    "node-sass": "^4.9.0",
-    "nodemon": "^1.17.5",
+    "node-sass": "^4.9.3",
+    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
-    "postcss": "^6.0.22",
-    "postcss-cli": "^5.0.0",
-    "replace-in-file": "^3.4.0",
+    "postcss": "^6.0.23",
+    "postcss-cli": "^5.0.1",
+    "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.60.7",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-eslint": "^4.0.0",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-terser": "^1.0.1",
     "sassdoc": "^2.1.19",
     "stylus": "^0.54.5"
   },
