--- a/package.json
+++ b/package.json
@@ -35,34 +35,34 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.6",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.2",
+    "autoprefixer": "^9.4.7",
     "browser-sync": "^2.26.3",
     "chai": "^4.2.0",
     "chai-diff": "^1.0.1",
     "compression": "^1.7.3",
     "cpx": "^1.5.0",
-    "eslint": "^5.12.1",
+    "eslint": "^6.8.0",
     "eslint-plugin-chai-expect": "^2.0.1",
-    "eslint-plugin-mocha": "^5.2.1",
+    "eslint-plugin-mocha": "^6.3.0",
     "handlebars": "^4.0.12",
     "less": "^3.9.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.1",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "^1.0.4",
     "mocha": "^5.2.0",
     "node-sass": "^4.11.0",
-    "nodemon": "^1.18.9",
+    "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.1",
-    "replace-in-file": "^3.4.3",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.1.2",
+    "postcss-cli": "^7.1.0",
+    "replace-in-file": "^5.0.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.6.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-eslint": "^5.0.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-terser": "^4.0.3",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-terser": "^5.3.0",
     "sassdoc": "^2.5.1",
     "stylus": "^0.54.5"
   },
