--- a/package.json
+++ b/package.json
@@ -31,40 +31,39 @@
     "semantic",
     "stylus"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.2",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "autoprefixer": "^9.4.7",
     "browser-sync": "^2.26.3",
     "chai": "^4.2.0",
     "chai-diff": "^1.0.1",
     "compression": "^1.7.3",
     "cpx": "^1.5.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-chai-expect": "^2.0.1",
-    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-mocha": "^9.0.0",
     "handlebars": "^4.0.12",
-    "less": "^3.9.0",
+    "less": "^4.1.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.1",
     "mkdirp": "^1.0.4",
-    "mocha": "^5.2.0",
-    "node-sass": "^4.11.0",
+    "mocha": "^9.1.1",
+    "node-sass": "^6.0.1",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
-    "replace-in-file": "^5.0.2",
+    "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.6.0",
-    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sassdoc": "^2.5.1",
-    "stylus": "^0.54.5"
+    "stylus": "^0.55.0"
   },
   "main": "dist/postcss/index.js",
   "scripts": {
