Reorganize directories and update npm scripts

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chai-diff": "^1.0.1",
     "compression": "^1.7.3",
     "cpx": "^1.5.0",
+    "dart-sass": "^1.25.0",
     "eslint": "^7.32.0",
     "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-plugin-mocha": "^9.0.0",
@@ -53,7 +54,6 @@
     "lodash.merge": "^4.6.1",
     "mkdirp": "^1.0.4",
     "mocha": "^9.1.1",
-    "node-sass": "^6.0.1",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
@@ -67,37 +67,38 @@
   },
   "main": "dist/postcss/index.js",
   "scripts": {
-    "build": "npm-run-all -p build:*-mixin build:*-plugin build:hbs -p build:*-grids build:sass-demo -p build:sassdoc",
-    "build:hbs": "node ./handlebars.config.js",
-    "build:less-grids": "lessc --include-path=dist build/demo/grids-less.less build/demo/grids-less.css",
-    "build:less-mixin": "cpx './src/**/*.less' ./dist && replace-in-file ./dist/**/*.less --configFile ./replace.config.js",
-    "build:less-plugin": "rollup -c rollup.less.config.js",
-    "build:postcss-grids": "postcss build/demo/*.pcss ---dir build/demo --ext css",
-    "build:postcss-plugin": "rollup -c rollup.postcss.config.js",
-    "build:sass-demo": "node-sass --output-style expanded demo/src/sass -o build/demo --include-path dist",
-    "build:sass-grids": "node-sass --output-style expanded build/demo -o build/demo --include-path dist",
-    "build:sass-mixin": "cpx './src/**/*.scss' ./dist && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js",
+    "build": "npm-run-all -s clean build:dist -p build:demo build:fixtures build:sassdoc",
+    "build:demo": "npm-run-all -s build:demo:hbs -p build:demo:less build:demo:postcss build:demo:sass build:demo:stylus",
+    "build:demo:hbs": "node build/build-demo.js",
+    "build:demo:less": "lessc --include-path=dist demo/grids-less.less demo/grids-less.css",
+    "build:demo:postcss": "postcss demo/*.pcss ---dir demo --ext css",
+    "build:demo:sass": "dart-sass demo:demo src/demo/sass:demo --load-path=dist --no-source-map",
+    "build:demo:stylus": "stylus demo -o demo --include dist",
+    "build:dist": "rimraf dist/* docs/sassdoc/* && npm-run-all -p build:dist:less build:dist:postcss build:dist:sass build:dist:stylus",
+    "build:dist:less": "run-p build:dist:less:*",
+    "build:dist:less:mixin": "cpx './src/less/*.less' ./dist/less && replace-in-file ./dist/**/*.less --configFile ./replace.config.js",
+    "build:dist:less:plugin": "rollup -c rollup.less.config.js",
+    "build:dist:postcss": "rollup -c rollup.postcss.config.js",
+    "build:dist:sass": "cpx './src/sass/*.scss' ./dist/sass && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js",
+    "build:dist:stylus": "cpx './src/stylus/*.styl' ./dist/stylus && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js",
+    "build:fixtures": "rimraf tests/fixtures/* && node build/build-fixtures.js",
     "build:sassdoc": "sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
-    "build:stylus-grids": "stylus build/demo -o build/demo --include dist",
-    "build:stylus-mixin": "cpx './src/**/*.styl' ./dist && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js",
-    "clean": "rimraf build/* dist/* docs/sassdoc/*",
-    "prepare": "run-s clean build",
-    "serve": "node server.js",
-    "start": "run-p watch serve",
+    "clean": "rimraf demo/* dist/* docs/sassdoc/* tests/fixtures/*",
+    "prepare": "run-s build",
+    "serve": "nodemon -q server.js",
+    "start": "run-s build watch serve",
     "test": "mocha tests",
     "version": "run-s prepare test && git add -A dist",
-    "watch": "npm-run-all build -p watch:*-mixin watch:*-plugin watch:hbs watch:*-grids watch:sass-demo watch:sassdoc",
-    "watch:hbs": "nodemon -w demo/src/templates -e hbs,js,json -x run-s build:hbs",
-    "watch:less-grids": "nodemon -w build/demo -w dist/less -e js,less -x run-s build:less-grids",
-    "watch:less-mixin": "nodemon -w src/less -e less -x run-s build:less-mixin",
-    "watch:less-plugin": "nodemon -w src/less/plugin -w src/postcss -x run-s build:less-plugin",
-    "watch:postcss-grids": "nodemon -w build/demo -e pcss -x run-s build:postcss-grids",
-    "watch:postcss-plugin": "nodemon -w src/postcss -x run-s build:postcss-plugin build:postcss-grids",
-    "watch:sass-demo": "nodemon -w demo/src/sass -w dist/sass -e scss -x run-s build:sass-demo",
-    "watch:sass-grids": "nodemon -w build/demo -w dist/sass -e scss -x run-s build:sass-grids",
-    "watch:sass-mixin": "nodemon -w src/sass -e scss -x run-s build:sass-mixin",
-    "watch:sassdoc": "nodemon -w dist/sass -w sassdoc.config.json -e scss -x run-s build:sassdoc",
-    "watch:stylus-grids": "nodemon -w build/demo -w dist/stylus -e styl -x run-s build:stylus-grids",
-    "watch:stylus-mixin": "nodemon -w src/stylus -e styl -x run-s build:stylus-mixin"
+    "watch": "run-p watch:demo:* watch:dist:* watch:sassdoc",
+    "watch:demo:less": "nodemon -C -q -w demo -e less -x run-s build:demo:less",
+    "watch:demo:postcss": "nodemon -C -q -w demo -e pcss -x run-s build:demo:postcss",
+    "watch:demo:sass": "nodemon -C -q -w demo -e scss -x run-s build:demo:sass",
+    "watch:demo:stylus": "nodemon -C -q -w demo -e styl -x run-s build:demo:stylus",
+    "watch:dist:hbs": "nodemon -C -q -w src/templates -x run-p build:demo build:fixtures",
+    "watch:dist:less": "nodemon -C -q -w src/less -x run-s build:dist:less",
+    "watch:dist:postcss": "nodemon -C -q -w src/postcss -x run-s build:dist:postcss build:dist:less",
+    "watch:dist:sass": "nodemon -C -q -w src/sass -x run-s build:dist:sass",
+    "watch:dist:stylus": "nodemon -C -q -w src/stylus -x run-s build:dist:stylus",
+    "watch:sassdoc": "nodemon -C -q -w src/sass -x run-s build:sassdoc"
   }
 }
