Sass module migration

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chai-diff": "^1.0.1",
     "compression": "^1.7.3",
     "cpx": "^1.5.0",
+    "dart-sass": "^1.25.0",
     "eslint": "^7.32.0",
     "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-plugin-mocha": "^9.0.0",
@@ -75,7 +76,10 @@
     "build:demo:hbs": "node build/build-demo.js",
     "build:demo:less": "lessc --include-path=dist demo/grids-less.less demo/grids-less.css",
     "build:demo:postcss": "postcss demo/*.pcss ---dir demo --ext css",
-    "build:demo:sass": "sass demo:demo src/demo/sass:demo --load-path=dist --no-source-map",
+    "build:demo:sass": "run-p build:demo:sass-*",
+    "build:demo:sass-styles": "sass src/demo/sass:demo --load-path=dist --no-source-map",
+    "build:demo:sass-import": "dart-sass demo/grids-sass-import.scss demo/grids-sass-import.css --load-path=dist --no-source-map",
+    "build:demo:sass-use": "sass demo/grids-sass-use.scss demo/grids-sass-use.css --load-path=dist --no-source-map",
     "build:demo:stylus": "stylus demo -o demo --include dist",
     "build:dist": "rimraf dist/* docs/sassdoc/* && npm-run-all -p build:dist:less build:dist:postcss build:dist:sass build:dist:stylus",
     "build:dist:less": "run-p build:dist:less:*",
