Silce replace output

--- a/package.json
+++ b/package.json
@@ -83,11 +83,11 @@
     "build:demo:stylus": "stylus demo -o demo --include dist",
     "build:dist": "rimraf dist/* docs/sassdoc/* && npm-run-all -p build:dist:less build:dist:postcss build:dist:sass build:dist:stylus",
     "build:dist:less": "run-p build:dist:less:*",
-    "build:dist:less:mixin": "cpx './src/less/*.less' ./dist/less && replace-in-file ./dist/**/*.less --configFile ./replace.config.js",
+    "build:dist:less:mixin": "cpx './src/less/*.less' ./dist/less && replace-in-file ./dist/**/*.less --configFile ./replace.config.js --quiet",
     "build:dist:less:plugin": "rollup -c rollup.less.config.js",
     "build:dist:postcss": "rollup -c rollup.postcss.config.js",
-    "build:dist:sass": "cpx './src/sass/*.scss' ./dist/sass && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js",
-    "build:dist:stylus": "cpx './src/stylus/*.styl' ./dist/stylus && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js",
+    "build:dist:sass": "cpx './src/sass/*.scss' ./dist/sass && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js --quiet",
+    "build:dist:stylus": "cpx './src/stylus/*.styl' ./dist/stylus && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js --quiet",
     "build:fixtures": "rimraf tests/fixtures/* && node build/build-fixtures.js",
     "build:sassdoc": "sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
     "clean": "rimraf demo/* dist/* docs/sassdoc/* tests/fixtures/*",
