Add Jest snapshot testing

--- a/package.json
+++ b/package.json
@@ -40,20 +40,18 @@
     "@rollup/plugin-node-resolve": "^13.0.4",
     "autoprefixer": "^10.3.4",
     "browser-sync": "^2.26.3",
-    "chai": "^4.2.0",
-    "chai-diff": "^1.0.1",
     "compression": "^1.7.3",
     "cpx": "^1.5.0",
     "dart-sass": "^1.25.0",
+    "dedent": "^0.7.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-chai-expect": "^2.0.1",
-    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-jest": "^24.4.0",
     "handlebars": "^4.0.12",
+    "jest": "^27.2.0",
     "less": "^4.1.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.1",
     "mkdirp": "^1.0.4",
-    "mocha": "^9.1.1",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.1",
@@ -94,7 +92,7 @@
     "prepare": "run-s clean build",
     "serve": "nodemon -q server.js",
     "start": "npm-run-all -s build -p watch serve",
-    "test": "mocha tests",
+    "test": "jest",
     "version": "run-s prepare test && git add -A dist",
     "watch": "run-p watch:demo:* watch:dist:* watch:sassdoc",
     "watch:demo:hbs": "nodemon -C -q -w src/templates -e '*' -x run-p build:demo build:fixtures",
