--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "less": "^4.1.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.1",
+    "markdownlint-cli": "^0.28.1",
     "mkdirp": "^1.0.4",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
@@ -89,11 +90,12 @@
     "build:fixtures": "rimraf tests/fixtures/* && node build/build-fixtures.js",
     "build:sassdoc": "sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
     "clean": "rimraf demo/* dist/* docs/sassdoc/* tests/fixtures/*",
+    "lint": "eslint . && markdownlint . --ignore node_modules",
     "prepare": "run-s clean build",
     "serve": "nodemon -q server.js",
     "start": "npm-run-all -s build -p watch serve",
     "test": "jest",
-    "version": "run-s prepare test && git add -A dist",
+    "version": "run-s prepare lint test && git add -A dist",
     "watch": "run-p watch:demo:* watch:dist:* watch:sassdoc",
     "watch:demo:hbs": "nodemon -C -q -w src/templates -e '*' -x run-p build:demo build:fixtures",
     "watch:demo:less": "nodemon -C -q -w demo -e less -x run-s build:demo:less",
