Fix watch scripts

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "build:demo:sass-import": "dart-sass demo/grids-sass-import.scss demo/grids-sass-import.css --load-path=dist --no-source-map",
     "build:demo:sass-use": "sass demo/grids-sass-use.scss demo/grids-sass-use.css --load-path=dist --no-source-map",
     "build:demo:stylus": "stylus demo -o demo --include dist",
-    "build:dist": "rimraf dist/* docs/sassdoc/* && npm-run-all -p build:dist:less build:dist:postcss build:dist:sass build:dist:stylus",
+    "build:dist": "rimraf dist/* && run-p build:dist:*",
     "build:dist:less": "run-p build:dist:less:*",
     "build:dist:less:mixin": "cpx './src/less/*.less' ./dist/less && replace-in-file ./dist/**/*.less --configFile ./replace.config.js --quiet",
     "build:dist:less:plugin": "rollup -c rollup.less.config.js",
@@ -88,24 +88,25 @@
     "build:dist:sass": "cpx './src/sass/*.scss' ./dist/sass && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js --quiet",
     "build:dist:stylus": "cpx './src/stylus/*.styl' ./dist/stylus && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js --quiet",
     "build:fixtures": "rimraf tests/fixtures/* && node build/build-fixtures.js",
-    "build:sassdoc": "sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
+    "build:sassdoc": "rimraf docs/sassdoc/* && sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
     "clean": "rimraf demo/* dist/* docs/sassdoc/* tests/fixtures/*",
     "lint": "eslint . && markdownlint . --ignore node_modules",
     "prepare": "run-s clean build",
-    "serve": "nodemon -q server.js",
+    "serve": "node server.js",
     "start": "npm-run-all -s build -p watch serve",
     "test": "jest",
+    "test:watch": "jest --watch & nodemon --delay 1 -C -q -w tests/fixtures -e '*' -x run-s test",
     "version": "run-s prepare lint test && git add -A dist",
-    "watch": "run-p watch:demo:* watch:dist:* watch:sassdoc",
-    "watch:demo:hbs": "nodemon -C -q -w src/templates -e '*' -x run-p build:demo build:fixtures",
+    "watch": "run-p watch:**",
     "watch:demo:less": "nodemon -C -q -w demo -e less -x run-s build:demo:less",
     "watch:demo:postcss": "nodemon -C -q -w demo -e pcss -x run-s build:demo:postcss",
-    "watch:demo:sass": "nodemon -C -q -w src/demo -w demo -e scss -x run-s build:demo:sass",
+    "watch:demo:sass": "nodemon -C -q -w demo -w src/demo -e scss -x run-s build:demo:sass",
     "watch:demo:stylus": "nodemon -C -q -w demo -e styl -x run-s build:demo:stylus",
-    "watch:dist:less": "nodemon -C -q -w src/less -e '*' -x run-s build:dist:less",
-    "watch:dist:postcss": "nodemon -C -q -w src/postcss -e '*' -x run-s build:dist:postcss build:dist:less",
-    "watch:dist:sass": "nodemon -C -q -w src/sass -e '*' -x run-s build:dist:sass",
-    "watch:dist:stylus": "nodemon -C -q -w src/stylus -e '*' -x run-s build:dist:stylus",
-    "watch:sassdoc": "nodemon -C -q -w src/sass -e '*' -x run-s build:sassdoc"
+    "watch:dist": "nodemon -C -q -w dist -e '*' -x run-s build:demo build:fixtures",
+    "watch:src:less": "nodemon -C -q -w src/less -e '*' -x run-s build:dist:less",
+    "watch:src:postcss": "nodemon -C -q -w src/postcss -e '*' -x run-s build:dist:postcss build:dist:less",
+    "watch:src:sass": "nodemon -C -q -w src/sass -e '*' -x run-s build:dist:sass build:sassdoc",
+    "watch:src:stylus": "nodemon -C -q -w src/stylus -e '*' -x run-s build:dist:stylus",
+    "watch:src:templates": "nodemon -C -q -w src/templates -e '*' -x run-p build:demo build:fixtures"
   }
 }
