--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mkdirp": "^1.0.4",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "8.3.6",
     "postcss-cli": "^8.3.1",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
@@ -66,7 +67,7 @@
     "stylus": "^0.55.0"
   },
   "peerDependencies": {
-    "postcss": "^8.0.0"
+    "postcss": "^8.3.6"
   },
   "main": "dist/postcss/index.js",
   "scripts": {
