--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "browser-sync": "^2.26.3",
     "compression": "^1.7.3",
     "cpx": "^1.5.0",
+    "css-device-frames": "^1.0.1",
     "dart-sass": "^1.25.0",
     "dedent": "^0.7.0",
     "eslint": "^7.32.0",
@@ -70,7 +71,7 @@
   },
   "main": "dist/postcss/index.js",
   "scripts": {
-    "build": "npm-run-all -s build:dist -p build:demo build:fixtures build:sassdoc",
+    "build": "npm-run-all -s build:dist -p build:demo build:fixtures build:docs:sass build:sassdoc",
     "build:demo": "npm-run-all -s build:demo:hbs -p build:demo:less build:demo:postcss build:demo:sass build:demo:stylus",
     "build:demo:hbs": "node build/build-demo.js",
     "build:demo:less": "lessc --include-path=dist demo/grids-less.less demo/grids-less.css",
@@ -87,6 +88,7 @@
     "build:dist:postcss": "rollup -c rollup.postcss.config.js",
     "build:dist:sass": "cpx './src/sass/*.scss' ./dist/sass && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js --quiet",
     "build:dist:stylus": "cpx './src/stylus/*.styl' ./dist/stylus && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js --quiet",
+    "build:docs:sass": "sass src/docs/sass:docs --load-path=dist --load-path=node_modules/css-device-frames/dist/ --no-source-map",
     "build:fixtures": "rimraf tests/fixtures/* && node build/build-fixtures.js",
     "build:sassdoc": "rimraf docs/sassdoc/* && sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
     "clean": "rimraf demo/* dist/* docs/sassdoc/* tests/fixtures/*",
@@ -106,6 +108,7 @@
     "watch:src:less": "nodemon -C -q -w src/less -e '*' -x run-s build:dist:less",
     "watch:src:postcss": "nodemon -C -q -w src/postcss -e '*' -x run-s build:dist:postcss build:dist:less",
     "watch:src:sass": "nodemon -C -q -w src/sass -e '*' -x run-s build:dist:sass build:sassdoc",
+    "watch:src:docs:sass": "nodemon -C -q -w src/docs -e '*' -x run-s build:docs:sass",
     "watch:src:stylus": "nodemon -C -q -w src/stylus -e '*' -x run-s build:dist:stylus",
     "watch:src:templates": "nodemon -C -q -w src/templates -e '*' -x run-p build:demo build:fixtures"
   }
