--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-eslint": "^9.0.5",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "autoprefixer": "^10.3.4",
     "browser-sync": "^3.0.2",
     "compression": "^1.7.3",
@@ -58,9 +60,7 @@
     "postcss-cli": "^11.0.0",
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.6.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^4.9.6",
     "sass": "^1.41.1",
     "sassdoc": "^2.5.1",
     "stylus": "^0.62.0"
@@ -83,8 +83,8 @@
     "build:dist": "rimraf dist/* && run-p build:dist:*",
     "build:dist:less": "run-p build:dist:less:*",
     "build:dist:less:mixin": "cpx './src/less/*.less' ./dist/less && replace-in-file ./dist/**/*.less --configFile ./replace.config.js --quiet",
-    "build:dist:less:plugin": "rollup -c rollup.less.config.js",
-    "build:dist:postcss": "rollup -c rollup.postcss.config.js",
+    "build:dist:less:plugin": "rollup -c rollup.less.config.mjs",
+    "build:dist:postcss": "rollup -c rollup.postcss.config.mjs",
     "build:dist:sass": "cpx './src/sass/*.scss' ./dist/sass && replace-in-file ./dist/**/*.scss --configFile ./replace.config.js --quiet",
     "build:dist:stylus": "cpx './src/stylus/*.styl' ./dist/stylus && replace-in-file ./dist/**/*.styl --configFile ./replace.config.js --quiet",
     "build:docs:sass": "sass src/docs/sass:docs --load-path=dist --load-path=node_modules/css-device-frames/dist/ --no-source-map",
