--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "css-device-frames": "^1.0.1",
     "dart-sass": "^1.25.0",
     "dedent": "^1.5.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^24.4.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.3",
     "handlebars": "^4.0.12",
     "jest": "^29.7.0",
     "less": "^4.1.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.merge": "^4.6.1",
-    "markdownlint-cli": "^0.28.1",
+    "markdownlint-cli": "^0.39.0",
     "mkdirp": "^1.0.4",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
@@ -91,7 +91,8 @@
     "build:fixtures": "rimraf tests/fixtures/* && node build/build-fixtures.js",
     "build:sassdoc": "rimraf docs/sassdoc/* && sassdoc ./dist/sass -d ./docs/sassdoc -c ./sassdoc.config.json",
     "clean": "rimraf demo/* dist/* docs/sassdoc/* tests/fixtures/*",
-    "lint": "eslint . && markdownlint . --ignore node_modules",
+    "lint": "eslint . && markdownlint *.md docs/*.md --ignore node_modules",
+    "lint:fix": "eslint . --fix",
     "prepare": "run-s clean build",
     "serve": "node server.js",
     "start": "npm-run-all -s build -p watch serve",
