--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "John Hildenbiddle",
   "description": "Nth-Grid is a versatile semantic CSS grid system with legacy browser support for Less, PostCSS, Sass, and Stylus.",
   "license": "MIT",
-  "homepage": "https://github.com/jhildenbiddle/nth-grid",
+  "homepage": "https://jhildenbiddle.github.io/nth-grid",
   "repository": {
     "type": "git",
     "url": "git://github.com/jhildenbiddle/nth-grid.git"
